--- a/package.json
+++ b/package.json
@@ -46,5 +46,5 @@
       "last 1 safari version"
     ]
   },
-"proxy": "https://silk-political-target.glitch.me/"
+"proxy": "https://thundering-quill-shop.glitch.me"
 }
