--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@material-ui/core": "^4.12.4",
     "@mui/material": "^5.12.0",
     "@reduxjs/toolkit": "^1.9.3",
     "@testing-library/jest-dom": "^5.16.5",
@@ -12,6 +13,9 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.5",
     "install": "^0.13.0",
+    "js-cookie": "^3.0.1",
+    "mongodb": "^5.3.0",
+    "mongoose": "^7.0.4",
     "npm": "^9.6.4",
     "react": "^18.2.0",
     "react-alert": "^7.0.3",
@@ -45,6 +49,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-"proxy": "https://thundering-quill-shop.glitch.me"
+  }
 }
